--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://joeyhetfield.github.io/recipes-app/",
-  "name": "recipes-app-test",
+  "name": "recipes-app",
   "version": "1.0.0",
   "private": true,
   "engines": {
@@ -9,7 +9,6 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "clipboard-copy": "^4.0.1",
-    "gh-pages": "^5.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -56,6 +55,7 @@
     "cypress-multi-reporters": "^1.6.2",
     "eslint-config-trybe-frontend": "1.5.0",
     "fs-extra": "^10.1.0",
+    "gh-pages": "^5.0.0",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.2",
