--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://joeyhetfield.github.io/recipes-app/",
   "name": "recipes-app",
+  "homepage": "https://joeyhetfield.github.io/recipes-app/",
   "version": "1.0.0",
   "private": true,
   "engines": {
@@ -19,6 +19,8 @@
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "cy": "env CY_CLI=true cypress run",
     "cy:open": "cypress open --e2e --browser chrome",
     "start": "env ESLINT_NO_DEV_ERRORS=true react-scripts start",
@@ -27,9 +29,8 @@
     "test-coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx",
-    "lint:styles": "npx stylelint '**/*.css'",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint:styles": "npx stylelint '**/*.css'"
+  
   },
   "eslintConfig": {
     "extends": "react-app"
